@@ -41,6 +41,7 @@ lnkinfo_LDADD  = \
 	@LIBFWSI_LIBADD@ \
 	@LIBFGUID_LIBADD@ \
 	@LIBFDATETIME_LIBADD@ \
+	@LIBCDATA_LIBADD@ \
 	../liblnk/liblnk.la \
 	@LIBCNOTIFY_LIBADD@ \
 	@LIBCLOCALE_LIBADD@ \
